# test_task_1

./: .env_example  README.md  api.DockerFile  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml  setup.cfg  websocket.DockerFile  worker.DockerFile
scheme/: project.puml
src/api/: ddos_script.py  jwt_token.py  main.py  startup_shutdown.py
src/api/models/: base_orjson.py  tokens.py
src/api/utils/: payload_parser.py  rate_limiter.py
src/config/: base_config.py  logging_settings.py  settings.py
src/db/async_db_session/: abstract_classes.py  redis_client.py
src/message_brokers/: rabbit_message_broker.py
src/utils/: custom_exceptions.py  timeout_limiter.py
src/websocket/: .env_example  callback.py  main.py  startup.py
src/worker/: callback.py  main.py
src/worker/models/: base_config.py  log.py  message_data.py
